--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Sign In Page</title>
 </head>
 <body>
-    
+    <div class = "PictureSubSection">
+        <div class = "BlackBarCaption">
+        </div>
+    </div>
+    <div class = "WhiteSpace">
+        
+    </div>
 </body>
 </html>
