Updating Page Content, added more divs

--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
 <body>
     <div class = "PictureSubSection">
         <div class = "BlackBarCaption">
+            <div id = "CaptionText"> Glohny's Login </div>
         </div>
     </div>
     <div class = "WhiteSpace">
-        
+        <div class = "LoginArea">
+            
+        </div>
     </div>
 </body>
 </html>
