--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
                 <div class = "InputColumns">
                     <label for="phone_number">PHONE NUMBER</label>
-                    <input type="tel" name="phone_number" id="phone_number" required>
+                    <input type="tel" name="phone_number" id="phone_number">
                 </div>
 
                 <div class = "InputColumns">
